--- a/index.html
+++ b/index.html
@@ -144,7 +144,26 @@
 
         footer p { font-size:14px; }
 
-        @media (max-width:768px){
+        /* YouTube Video Container */
+        .youtube-container {
+            max-width: 800px;
+            margin: 60px auto;
+            padding: 0 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .youtube-container iframe {
+            width: 100%;
+            height: 450px;
+            border: 3px solid #6b4423;
+            display: block;
+        }
+
+        @media (max-width: 768px) {
+            .youtube-container iframe {
+                height: 300px;
+            }
             .header-container { flex-direction:column; gap:15px; }
             nav a { display:inline-block; margin:5px 10px; }
             .artists-grid { grid-template-columns:1fr; }
@@ -172,6 +191,18 @@
     <img src="ezgifhighres.gif" alt="Featured" class="page-gif" onclick="window.open('https://soundcloud.com/openmicnightnextweekend', '_blank')">
 
     <div class="container">
+        <div class="youtube-container">
+            <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube-nocookie.com/embed/fYaw9Ii8Y5Y?origin=https://hollowtekken96141.github.io/"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+        </div>
+
         <div class="featured-artists-section">
             <h2 class="section-title">Featured Artists</h2>
             <div class="artists-grid">
