--- a/index.html
+++ b/index.html
@@ -221,10 +221,17 @@
                     </div>
                 </div>
                 <div class="artist-card">
+                    <div class="artist-name">♬tohearttwo</div>
+                    <div class="artist-links">
+                        <a href="https://soundcloud.com/shizukupc98" target="_blank" rel="noopener noreferrer" class="artist-link">SoundCloud</a>
+                        <a href="https://www.instagram.com/shizukupc98" target="_blank" rel="noopener noreferrer" class="artist-link">Instagram</a>
+                    </div>
+                </div>
+                <div class="artist-card">
                     <div class="artist-name">♬Swords2</div>
                     <div class="artist-links">
                         <a href="https://soundcloud.com/swords2" target="_blank" rel="noopener noreferrer" class="artist-link">SoundCloud</a>
-                        <a href="https://instagram.com/2swords2" target="_blank" rel="noopener noreferrer" class="artist-link">Instagram</a>
+                        <a href="https://www.instagram.com/2swords2" target="_blank" rel="noopener noreferrer" class="artist-link">Instagram</a>
                     </div>
                 </div>
                 <div class="artist-card">
@@ -232,13 +239,6 @@
                     <div class="artist-links">
                         <a href="https://soundcloud.com/paperarmoury" target="_blank" rel="noopener noreferrer" class="artist-link">SoundCloud</a>
                         <a href="https://www.instagram.com/paper.armoury" target="_blank" rel="noopener noreferrer" class="artist-link">Instagram</a>
-                    </div>
-                </div>
-                <div class="artist-card">
-                    <div class="artist-name">♬tohearttwo</div>
-                    <div class="artist-links">
-                        <a href="https://soundcloud.com/shizukupc98" target="_blank" rel="noopener noreferrer" class="artist-link">SoundCloud</a>
-                        <a href="https://www.instagram.com/shizukupc98" target="_blank" rel="noopener noreferrer" class="artist-link">Instagram</a>
                     </div>
                 </div>
                 <div class="artist-card">
